--- a/Application/ARQuiz/app/src/main/res/values/colors.xml
+++ b/Application/ARQuiz/app/src/main/res/values/colors.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#03A9F4</color>
+    <color name="colorPrimary">#1de9b6</color>
     <color name="colorPrimaryDark">#0277BD</color>
     <color name="colorAccent">#FF4081</color>
     <color name="colorWhite">#FFFFFF</color>
+    <color name="colorLightGrey">#f0f0f0</color>
+    <color name="transparent">#00FFFFFF</color>
 </resources>
