--- a/Application/ARQuiz/app/src/main/res/values/styles.xml
+++ b/Application/ARQuiz/app/src/main/res/values/styles.xml
@@ -6,6 +6,57 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="toolbarStyle">@style/Widget.Design.CollapsingToolbar</item>
+        <item name="colorControlHighlight">@color/colorPrimaryDark</item>
+    </style>
+
+    <style name="MainBtn" parent="@android:style/Widget.Button">
+        <item name="android:background">@color/colorWhite</item>
+        <item name="android:textColor">@color/colorPrimaryDark</item>
+        <item name="android:layout_gravity">center_horizontal</item>
+        <item name="android:paddingLeft">6dp</item>
+        <item name="android:paddingRight">6dp</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:layout_marginTop">12dp</item>
+    </style>
+
+    <style name="FormInput" parent="@android:style/Widget.EditText">
+        <item name="android:textSize">24sp</item>
+        <item name="android:background">@color/colorWhite</item>
+        <item name="android:paddingLeft">4dp</item>
+        <item name="android:paddingRight">4dp</item>
+        <item name="android:paddingTop">6dp</item>
+        <item name="android:paddingBottom">6dp</item>
+        <item name="android:layout_marginTop">2dp</item>
+        <item name="android:layout_marginBottom">6dp</item>
+    </style>
+
+    <style name="FormLabel" parent="@android:style/TextAppearance">
+        <item name="android:textColor">@color/colorWhite</item>
+    </style>
+
+    <style name="transparentBtn">
+        <item name="android:background">@color/transparent</item>
+    </style>
+
+    <style name="ActivityTitle" parent="@android:style/TextAppearance">
+        <item name="android:textColor">@color/colorWhite</item>
+        <item name="android:textSize">48sp</item>
+    </style>
+
+    <style name="ActivityStatusBar" parent="@android:style/TextAppearance">
+        <item name="android:textColor">@color/colorWhite</item>
+        <item name="android:textSize">20sp</item>
+    </style>
+
+    <style name="QuestionCardTitle" parent="@android:style/TextAppearance">
+        <item name="android:textColor">@android:color/black</item>
+        <item name="android:textSize">32sp</item>
+    </style>
+
+    <style name="QuestionCardDesc" parent="@android:style/TextAppearance">
+        <item name="android:textColor">@color/colorPrimaryDark</item>
+        <item name="android:textSize">16sp</item>
     </style>
 
 </resources>
