--- a/Application/ARQuizServer/web/styles/style.css
+++ b/Application/ARQuizServer/web/styles/style.css
@@ -17,6 +17,7 @@ body {
 a,
 button,
 input[type=submit],
+input[type=button],
 .button {
     cursor: pointer;
 }
@@ -169,6 +170,7 @@ body#public-page {
 
 #private-page #main {
     min-height: calc(100% - 4em);
+    margin-bottom: .5em;
     background: #fff;
 }
 
@@ -180,11 +182,15 @@ body#public-page {
 #private-page #main .item {
     display: inline-block;
     width: calc(25% - 1em);
-    margin: 1em;
+    margin: 0.5em;
     height: 5em;
     -webkit-border-radius: .1em;;
     -moz-border-radius: .1em;;
     border-radius: .1em;
+}
+
+#private-page #main .item.full-width {
+    width: calc(100% - 1em);
 }
 
 #private-page #main .main-item {
@@ -204,8 +210,8 @@ body#public-page {
 }
 
 #private-page #main .main-item .item-box {
-    width: 94%;
-    margin-left: 6%;
+    width: calc(100% - .5em);
+    margin-left: 1em;
 }
 
 #private-page #main .main-item .item-box .item-content {
@@ -239,7 +245,7 @@ body#public-page {
     background: linear-gradient(135deg, #1de9b6 0%, #0277bd 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#1de9b6', endColorstr='#0277bd', GradientType=1); /* IE6-9 fallback on horizontal gradient */
 
-    width: 4%;
+    width: .5em;
     height: 100%;
 }
 
@@ -259,6 +265,7 @@ body#public-page {
     width: 100%;
     height: 100%;
     background: rgba(0,0,0,.7);
+    overflow: auto;
 }
 
 .overlay form {
@@ -267,29 +274,78 @@ body#public-page {
     max-width: 100%;
     margin: 0 auto;
     margin-top: 10%;
+    margin-bottom: 1em;
     padding: 1em;
     box-shadow: 0 0 .2em rgba(0,0,0,.4);
 }
 
+.overlay form.disabled * {
+    pointer-events: none !important;
+}
+
 .overlay form input[type=text],
+.overlay form select,
 .overlay form label {
     display: block;
     width: 100%;
+}
+
+.overlay form input[type=file] {
+    width: 0;
+    height: 0;
+    opacity: 0;
+    overflow: hidden;
+    position: absolute;
+    z-index: -1;
+}
+
+.overlay form input[type=file] + label {
+    background-color: #0277bd;
+    color: #fff;
+    display: inline-block;
+    width: 12em;
+    max-width: 90%;
+    height: 2em;
+    line-height: 2em;
+    text-align: center;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    cursor: pointer;
+    padding: 0 .5em;
 }
 
 .overlay form label {
     font-size: .8em;
 }
 
-.overlay form input[type=text] {
+.overlay form .note {
+    font-size: .7em;
+    color: #0277bd;
+}
+
+.overlay form input[type=text],
+.overlay form .input-file-box,
+.overlay form select {
     background-color: #eeeeee;
     border: none;
-    padding: .2em;
     margin-bottom: 1em;
+    padding: .2em;
+}
+
+.overlay form .input-file-box {
+    background-color: transparent;
+    position: relative;
+    margin-top:.1em;
+    padding: 0;
 }
 
 #private-page .button-box {
     text-align: right;
+}
+
+.overlay form.disabled .button-box * {
+    display: none;
 }
 
 #private-page .main-btn {
@@ -397,5 +453,68 @@ body#public-page {
 @media all and (max-width: 30em) {
     #private-page #main .item {
         width: calc(100% - 1em);
+    }
+}
+
+/* LOADING */
+
+.loader,
+.loader:before,
+.loader:after {
+    border-radius: 50%;
+    width: 2.5em;
+    height: 2.5em;
+    -webkit-animation-fill-mode: both;
+    animation-fill-mode: both;
+    -webkit-animation: load7 1.8s infinite ease-in-out;
+    animation: load7 1.8s infinite ease-in-out;
+}
+.loader {
+    color: #10b0ba;
+    font-size: .4em;
+    margin: 1em auto;
+    position: relative;
+    top: -2em;
+    text-indent: -9999em;
+    -webkit-transform: translateZ(0);
+    -ms-transform: translateZ(0);
+    transform: translateZ(0);
+    -webkit-animation-delay: -0.16s;
+    animation-delay: -0.16s;
+}
+.loader:before,
+.loader:after {
+    content: '';
+    position: absolute;
+    top: 0;
+}
+.loader:before {
+    left: -3.5em;
+    -webkit-animation-delay: -0.32s;
+    animation-delay: -0.32s;
+    color: #1de9b6;
+}
+.loader:after {
+    left: 3.5em;
+    color: #0277bd;
+}
+@-webkit-keyframes load7 {
+    0%,
+    80%,
+    100% {
+        box-shadow: 0 2.5em 0 -1.3em;
+    }
+    40% {
+        box-shadow: 0 2.5em 0 0;
+    }
+}
+@keyframes load7 {
+    0%,
+    80%,
+    100% {
+        box-shadow: 0 2.5em 0 -1.3em;
+    }
+    40% {
+        box-shadow: 0 2.5em 0 0;
     }
 }
