--- a/Application/ARQuiz/app/src/main/res/values/styles.xml
+++ b/Application/ARQuiz/app/src/main/res/values/styles.xml
@@ -20,6 +20,24 @@
         <item name="android:layout_marginTop">12dp</item>
     </style>
 
+    <style name="PrimaryBtn" parent="@android:style/Widget.Button">
+        <item name="android:background">@color/colorPrimaryDark</item>
+        <item name="android:textColor">@color/colorWhite</item>
+        <item name="android:layout_gravity">center_horizontal</item>
+        <item name="android:paddingLeft">10dp</item>
+        <item name="android:paddingRight">10dp</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+
+    <style name="SecondaryBtn" parent="@android:style/Widget.Button">
+        <item name="android:background">@color/transparent</item>
+        <item name="android:textColor">@color/colorPrimaryDark</item>
+        <item name="android:layout_gravity">center_horizontal</item>
+        <item name="android:paddingLeft">4dp</item>
+        <item name="android:paddingRight">4dp</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+
     <style name="FormInput" parent="@android:style/Widget.EditText">
         <item name="android:textSize">24sp</item>
         <item name="android:background">@color/colorWhite</item>
