--- a/Application/ARQuizServer/web/styles/style.css
+++ b/Application/ARQuizServer/web/styles/style.css
@@ -22,6 +22,29 @@ input[type=button],
     cursor: pointer;
 }
 
+.col {
+    padding: 1em;
+    display: inline-block;
+    vertical-align: top;
+    overflow: hidden;
+}
+
+.col:nth-child(odd) {
+    padding-left: 0;
+}
+
+.col:nth-child(even) {
+    padding-right: 0;
+}
+
+.col-40 {
+    width: 39.5%;
+}
+
+.col-60 {
+    width: 59.5%;
+}
+
 body#public-page {
     /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#1de9b6+0,0277bd+100 */
     background: #1de9b6; /* Old browsers */
@@ -179,6 +202,17 @@ body#public-page {
     font-weight: 300;
 }
 
+#private-page #main h2 {
+    display: inline-block;
+    font-size: 1.4em;
+    font-weight: 300;
+}
+
+#private-page #main h3 {
+    font-size: 1.1em;
+    font-weight: 300;
+}
+
 #private-page #main .item {
     display: inline-block;
     width: calc(25% - 1em);
@@ -187,6 +221,10 @@ body#public-page {
     -webkit-border-radius: .1em;;
     -moz-border-radius: .1em;;
     border-radius: .1em;
+}
+
+#private-page #main .item:first-child {
+    margin-top: 1em;
 }
 
 #private-page #main .item.full-width {
@@ -279,18 +317,42 @@ body#public-page {
     box-shadow: 0 0 .2em rgba(0,0,0,.4);
 }
 
-.overlay form.disabled * {
+.form-box form {
+    background: #fff;
+    width: 20em;
+    max-width: 100%;
+    margin: 1em 0;
+    padding: 1em;
+    border: 1px solid #eeeeee;
+    border-radius: .2em;
+}
+
+.overlay form.disabled *,
+.form-box form.disabled *{
     pointer-events: none !important;
 }
 
 .overlay form input[type=text],
+.overlay form input[type=number],
 .overlay form select,
-.overlay form label {
+.overlay form label,
+.overlay form textarea,
+.form-box form input[type=text],
+.form-box form input[type=number],
+.form-box form select,
+.form-box form label,
+.form-box form textarea {
     display: block;
     width: 100%;
 }
 
-.overlay form input[type=file] {
+.overlay form textarea,
+.form-box form textarea {
+    resize: none;
+}
+
+.overlay form input[type=file],
+.form-box form input[type=file]{
     width: 0;
     height: 0;
     opacity: 0;
@@ -299,7 +361,8 @@ body#public-page {
     z-index: -1;
 }
 
-.overlay form input[type=file] + label {
+.overlay form input[type=file] + label,
+.form-box form input[type=file] + label{
     background-color: #0277bd;
     color: #fff;
     display: inline-block;
@@ -315,25 +378,38 @@ body#public-page {
     padding: 0 .5em;
 }
 
-.overlay form label {
+.overlay form label,
+.form-box form label{
     font-size: .8em;
 }
 
-.overlay form .note {
-    font-size: .7em;
+.note {
     color: #0277bd;
 }
 
+.overlay form .note,
+.form-box form .note{
+    font-size: .7em;
+}
+
 .overlay form input[type=text],
+.overlay form input[type=number],
 .overlay form .input-file-box,
-.overlay form select {
+.overlay form select,
+.overlay form textarea,
+.form-box form input[type=text],
+.form-box form input[type=number],
+.form-box form .input-file-box,
+.form-box form select,
+.form-box form textarea{
     background-color: #eeeeee;
     border: none;
     margin-bottom: 1em;
     padding: .2em;
 }
 
-.overlay form .input-file-box {
+.overlay form .input-file-box,
+.form-box form .input-file-box{
     background-color: transparent;
     position: relative;
     margin-top:.1em;
@@ -344,7 +420,8 @@ body#public-page {
     text-align: right;
 }
 
-.overlay form.disabled .button-box * {
+.overlay form.disabled .button-box *,
+.form-box form.disabled .button-box *{
     display: none;
 }
 
@@ -367,6 +444,93 @@ body#public-page {
     background: transparent;
     color: #0277bd;
     font-weight: 300;
+}
+
+#private-page .second-btn.remove-btn {
+    font-size: .8em;
+    color: #b61e1e;
+    float: right;
+}
+
+#private-page .target-rate {
+    display: inline-block;
+    height: 1.66em;
+    line-height: 1.66em;
+    float: right;
+}
+
+#private-page .target-rate .ic {
+    display: inline-block;
+    vertical-align: middle;
+    width: 1em;
+    height: 1em;
+    margin: 0 .1em;
+}
+
+#private-page .target-preview {
+    position: relative;
+    margin: 1em 0;
+    height: 40em;
+    background-color: #eeeeee;
+    border: 1px solid #eeeeee;
+    border-radius: .2em;
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+}
+
+#private-page .target-preview>.loader {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+}
+
+#private-page .target-preview .target-form-box {
+    height: 15em;
+    position: absolute;
+    top:0; left:0;
+    right:0; bottom: 0;
+    margin: auto;
+    text-align: center;
+}
+
+#private-page .target-preview .target-form-box * {
+    pointer-events: none;
+}
+
+#private-page .target-preview:hover .target-form-box * {
+    pointer-events: auto;
+}
+
+#private-page #main .target-preview .target-form-box form h2 {
+    display: block;
+    text-align: left;
+    margin-bottom: 1em;
+}
+
+#private-page .target-preview .target-form-box form {
+    display: none;
+    vertical-align: middle;
+    margin: auto;
+    text-align: left;
+    background-color: rgba(255,255,255,0);
+}
+
+#private-page .target-preview:hover .target-form-box form {
+    display: inline-block;
+    background-color: rgba(255,255,255,.95);
+}
+
+#private-page .target-preview:hover .target-form-box form.hide {
+    display: none;
+}
+
+#private-page .target-preview .target-form-box form.processing {
+    display: inline-block;
+    background-color: rgba(255,255,255,.95);
 }
 
 /* ICONS */
@@ -436,6 +600,17 @@ body#public-page {
 .ic-af.ic-add:after,
 .ic.ic-add {
     background-image: url("data:image/svg+xml,%3Csvg%20fill%3D%22%23FFFFFF%22%20height%3D%2224%22%20viewBox%3D%220%200%2024%2024%22%20width%3D%2224%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%0A%20%20%20%20%3Cpath%20d%3D%22M19%2013h-6v6h-2v-6H5v-2h6V5h2v6h6v2z%22%2F%3E%0A%20%20%20%20%3Cpath%20d%3D%22M0%200h24v24H0z%22%20fill%3D%22none%22%2F%3E%0A%3C%2Fsvg%3E");
+}
+
+
+.ic-af.ic-star-filled:after,
+.ic.ic-star-filled {
+    background-image: url("data:image/svg+xml,%3Csvg%20fill%3D%22%230277bd%22%20height%3D%2224%22%20viewBox%3D%220%200%2024%2024%22%20width%3D%2224%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%0A%20%20%20%20%3Cpath%20d%3D%22M0%200h24v24H0z%22%20fill%3D%22none%22%2F%3E%0A%20%20%20%20%3Cpath%20d%3D%22M12%2017.27L18.18%2021l-1.64-7.03L22%209.24l-7.19-.61L12%202%209.19%208.63%202%209.24l5.46%204.73L5.82%2021z%22%2F%3E%0A%20%20%20%20%3Cpath%20d%3D%22M0%200h24v24H0z%22%20fill%3D%22none%22%2F%3E%0A%3C%2Fsvg%3E");
+}
+
+.ic-af.ic-star:after,
+.ic.ic-star {
+    background-image: url("data:image/svg+xml,%3Csvg%20fill%3D%22%230277bd%22%20height%3D%2224%22%20viewBox%3D%220%200%2024%2024%22%20width%3D%2224%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%0A%20%20%20%20%3Cpath%20d%3D%22M22%209.24l-7.19-.62L12%202%209.19%208.63%202%209.24l5.46%204.73L5.82%2021%2012%2017.27%2018.18%2021l-1.63-7.03L22%209.24zM12%2015.4l-3.76%202.27%201-4.28-3.32-2.88%204.38-.38L12%206.1l1.71%204.04%204.38.38-3.32%202.88%201%204.28L12%2015.4z%22%2F%3E%0A%20%20%20%20%3Cpath%20d%3D%22M0%200h24v24H0z%22%20fill%3D%22none%22%2F%3E%0A%3C%2Fsvg%3E");
 }
 
 @media all and (max-width: 60em) {
@@ -517,4 +692,8 @@ body#public-page {
     40% {
         box-shadow: 0 2.5em 0 0;
     }
+}
+
+#private-page .hide {
+    display: none;
 }
