--- a/Application/ARQuiz/app/src/main/res/layout/activity_login.xml
+++ b/Application/ARQuiz/app/src/main/res/layout/activity_login.xml
@@ -55,9 +55,8 @@
             <FrameLayout
                 android:id="@+id/login_fragment_container"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent" />
 
-            </FrameLayout>
         </RelativeLayout>
     </LinearLayout>
 
