--- a/Application/ARQuiz/app/src/main/res/values/colors.xml
+++ b/Application/ARQuiz/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="colorWhite">#FFFFFF</color>
     <color name="colorLightGrey">#f0f0f0</color>
     <color name="transparent">#00FFFFFF</color>
+    <color name="colorBlack">#000000</color>
 </resources>
